# freihand

./: .gitignore  README.md  compress_data.py  eval.py  eval_metrics.py  freihand-pose-approximation.ipynb  mediapipe_example.py  pose_model_training.ipynb  pred.py  pyproject.toml  test.ipynb  utils.py  view_samples.py
